Chrome OS - Don't show window title in container windows.

This restores the behavior that the window title won't be shown
in the window frame for container windows (ARC++/Crostini). The
exception is when a debug title ("extra title") has been set, in
which case the debug string is shown.

Overview mode will use the normal title, unless a debug/"extra" title
is set, in which case it uses that.

Bug: 842476
Change-Id: Id0df3466b66e769363f313772bf63ff9f26e7b80
Reviewed-on: https://chromium-review.googlesource.com/1058560
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Jun Mukai <mukai@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: David Reveman <reveman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560373}
Former-commit-id: 5052c19bd41059cf0cfc206f8af218a164a9df01