ash/frame/custom_frame_view_ash.cc
@@ -343,10 +343,6 @@ gfx::Rect CustomFrameViewAsh::GetClientBoundsForWindowBounds(
   return client_bounds;
 }
 
-base::string16 CustomFrameViewAsh::GetFrameTitle() const {
-  return frame_->widget_delegate()->GetWindowTitle();
-}
-
 ////////////////////////////////////////////////////////////////////////////////
 // CustomFrameViewAsh, views::NonClientFrameView overrides:
 
